--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ body {
 .wrapper {
   min-height: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 .container {
@@ -370,8 +371,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
   display: -webkit-box;
@@ -383,12 +384,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  opacity: 0;
-  visibility: hidden;
   -webkit-transition: opacity 0.3s ease 0s;
   -o-transition: opacity 0.3s ease 0s;
   transition: opacity 0.3s ease 0s;
   padding: 40px 20px;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .contact.active {
@@ -1243,10 +1244,10 @@ body {
 
   .menu-header {
     margin-left: 0;
-    position: absolute;
+    position: fixed;
     background-color: #2a2a2a;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: auto;
     left: 0;
     top: 0;
@@ -1359,6 +1360,7 @@ body {
   .main-section__body {
     display: block;
     text-align: center;
+    padding-bottom: 30px;
   }
 
   .main-section__info {
