--- a/scss/_common-styles.scss
+++ b/scss/_common-styles.scss
@@ -13,6 +13,7 @@ body {
 .wrapper {
 	min-height: 100%;
 	overflow: hidden;
+	position: relative;
 }
 .container {
 	max-width: #{$maxWidthContainer} + px;
