--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -64,10 +64,10 @@
 	margin-left: 20px;
 	@media (max-width: 767px) {
 		margin-left: 0;
-		position: absolute;
+		position: fixed;
 		background-color: $colorGrayDark;
 		width: 100%;
-		height: 100vh;
+		height: 100%;
 		overflow: auto;
 		left: 0;
 		top: 0;
