--- a/scss/_popups.scss
+++ b/scss/_popups.scss
@@ -3,17 +3,17 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-color: rgba(0, 0, 0, 0.8);
 	z-index: 1000;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	opacity: 0;
-	visibility: hidden;
 	transition: opacity 0.3s ease 0s;
 	padding: 40px 20px;
+	opacity: 0;
+	visibility: hidden;
 	&.active {
 		opacity: 1;
 		visibility: visible;
