--- a/css/style.css
+++ b/css/style.css
@@ -1014,6 +1014,7 @@ body {
 .slide-portfolio__img img {
   border-radius: inherit;
   width: 100%;
+  max-height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
